@@ -9,6 +9,8 @@ Revision history for SPVM
           https://github.com/yuki-kimoto/SPVM/releases/tag/before_remove_exe_20211216
         
         * SPVM::Builder::Config "ccflags" default becomes empty string.
+        * Remove delete_std of SPVM::Builder::Config
+        
 0.9018  2021-12-11
         [CHANGES]
         * Depends on ExtUtils::CBuilder for Perl 5.8
